poc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc
  template:
    metadata:
      labels:
        app: poc
    spec:
      containers:
      - name: poc
        image: midianet/kube:1.0.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
