poc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc
spec:
  type: LoadBalancer
  selector:
    app: poc
  ports:
    - port: 8080
