poc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: poc
    http:
      paths:
      - path: /
        backend:
          serviceName: poc
          servicePort: 8080
